# auto-tag-testing

./: README.md
.github/workflows/: create-release.yml  tag-build.yml
backend/: README.md  pyproject.toml
frontend/: package-lock.json
