[tool.poetry]
name = "my-project"
version = "0.1.0"
description = "A simple project"
authors = ["darcalde_cisco <darcalde_cisco@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
strands-agents = "^1.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
